<resources>
    <string name="app_name">Liengua</string>
    <string name="search_phrases">Search phrases</string>
    <string name="translations">Translations</string>
    <string name="english_sentence">English Sentence</string>
    <string name="spanish_translation">Spanish translation</string>
    <string name="dutch_translation">Dutch translation</string>
    <string name="russian_translation">Russian translation</string>
    <string name="get_random_phrase">Get Random Phrase</string>
    <string name="spanish">Spanish</string>
    <string name="dutch">Dutch</string>
    <string name="russian">Russian</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="note_to_lien">Note to Lien</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_bookmarks">add_to_bookmarks</string>
    <string name="your_library">your library</string>
    <string name="collections">Collections</string>
    <string name="exercises">Exercises</string>
    <string name="home">home</string>
    <string name="menu">menu</string>
    <string name="move_item_up" />
    <string name="move_item_down" />
    <string name="scroll_to_top">scroll to top</string>
    <string name="flag_for_improvement">flag for improvement</string>
    <string name="give_feedback">Give feedback</string>
    <string name="request_review">request review</string>
    <string-array name="languages">
        <item>Spanish</item>
        <item>Dutch</item>
        <item>Russian</item>
    </string-array>
</resources>