<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checkbox_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="right"
    android:layout_toStartOf="@id/menu_button"
    android:layout_marginStart="40dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBox
        android:id="@+id/dutch_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/teal_200"
        android:checked="true"
        android:paddingRight="8dp"
        android:text="@string/dutch" />

    <CheckBox
        android:id="@+id/russian_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/teal_200"
        android:checked="true"
        android:paddingRight="8dp"
        android:text="@string/russian" />

    <CheckBox
        android:id="@+id/spanish_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:buttonTint="@color/teal_200"
        android:paddingRight="18dp"
        android:text="@string/spanish" />
    <!-- Add the info icon -->
    <ImageView
        android:id="@+id/info_icon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:maxHeight="10dp"
        android:src="@drawable/info_24px"
        app:tint="@color/teal_200" />
                </LinearLayout>