<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="80dp"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:padding="2dp"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/entry_mark_buttons"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentStart="true"
    android:paddingEnd="10dp"
    tools:ignore="RtlSymmetry,UselessParent">

        <ImageButton
            android:id="@+id/bookmark_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/add_to_bookmarks"
            android:alpha=".3"
            android:paddingTop="3dp"
            android:paddingBottom="4dp"
            android:src="@drawable/bookmark_24px" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/add_to_favorites"
            android:paddingTop="4dp"
            android:alpha=".3"
            android:paddingBottom="4dp"
            android:src="@drawable/stars_24px" />

        <ImageButton
            android:id="@+id/more_options_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="More options"
            android:paddingTop="6dp"
            android:alpha=".5"
            android:paddingBottom="6dp"
            android:src="@drawable/more_horiz_24px" />

</LinearLayout>
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/move_buttons_layout"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/englishSentence"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/flag_button"
                        android:layout_marginBottom="8dp"
                        android:layout_alignParentStart="true"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/english_sentence"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/flag_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:paddingHorizontal="6dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="-3dp"
                        android:layout_alignParentEnd="true"
                        android:alpha=".5"
                        android:background="?attr/selectableItemBackground"
                        android:padding="2dp"
                        android:scaleX=".6"
                        android:scaleY=".6"
                        android:src="@drawable/flag_24px" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/dutchTranslation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/dutch_translation" />

                <TextView
                    android:id="@+id/russianTranslation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/russian_translation" />

                <TextView
                    android:id="@+id/spanishTranslation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/spanish_translation" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp">

                <ImageButton
                    android:id="@+id/entry_delete_button"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/move_item_down"
                    android:src="@drawable/bookmark_remove_24px" />
            </RelativeLayout>
    <LinearLayout
        android:id="@+id/move_buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/move_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/move_item_up"
            android:alpha="0.7"
            android:padding="8dp"
            android:src="@drawable/arrow_upward_24px" />

        <ImageButton
            android:id="@+id/move_down_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/move_item_down"
            android:alpha="0.7"
            android:padding="8dp"
            android:src="@drawable/arrow_downward_24px" />
    </LinearLayout>


 </RelativeLayout>

</LinearLayout>
