<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_solid"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_200"
            android:textStyle="bold"
            android:text="Menu"/>

        <Button
            android:id="@+id/menu_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:drawableEnd="@drawable/stars_24px"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
         />

        <Button
            android:id="@+id/menu_collections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collections"
            android:drawableEnd="@drawable/bookmark_24px"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
          />

        <Button
            android:id="@+id/menu_exercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/sports_gymnastics_24px"
            android:drawableTint="@color/white"
            android:text="@string/exercises" />

        <Button
            android:id="@+id/menu_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/info_24px"
            android:drawableTint="@color/white"
            android:text="About" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>