<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout"
    tools:ignore="ExtraText">

    <!-- Include search bar and checkboxes layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_phrases"
            android:inputType="text" />

        <!-- RecyclerView to display translations -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <CheckBox
                android:id="@+id/spanish_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/spanish" />

            <CheckBox
                android:id="@+id/dutch_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dutch" />

            <CheckBox
                android:id="@+id/russian_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingRight="8dp"
                android:text="@string/russian" />

            <!-- Add the info icon -->
            <ImageView
                android:id="@+id/info_icon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:layout_marginEnd="16dp"
                android:maxHeight="10dp"
                android:src="@android:drawable/ic_menu_info_details" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dictionary_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="1dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>

    <!-- Include bottom sheet layout -->
    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorSurface"
        android:paddingTop="10dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <!-- Icon indicating swipe up gesture -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/swipe_icon_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/randomize_button"
                android:gravity="center"
                android:background="@drawable/border">
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/swipe_icon1"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:src="@android:drawable/arrow_up_float" />

                <ImageView
                    android:id="@+id/swipe_icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@android:drawable/sym_action_email" />

                <ImageView
                    android:id="@+id/swipe_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:src="@android:drawable/arrow_up_float" />
            </LinearLayout>

            <Button
                android:id="@+id/randomize_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Randomize"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_alignBaseline="@id/swipe_icon_layout"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/contactMessage"
                android:layout_width="0dp"
                android:maxHeight="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="top|start"
                android:hint="Write your message here"
                android:inputType="textMultiLine"
                android:scrollbars="vertical" />

            <ImageButton
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:contentDescription="TODO"
                android:src="@android:drawable/ic_menu_send"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
